Fix filter on mobile

--- a/wp-content/themes/sutunam/css/style.css
+++ b/wp-content/themes/sutunam/css/style.css
@@ -1205,7 +1205,7 @@ h6 {
   position: fixed;
   bottom: 0;
   top: 54px;
-  z-index: 11;
+  z-index: 111;
   -webkit-transition: all 0.3s ease;
   -moz-transition: all 0.3s ease;
   -o-transition: all 0.3s ease;
@@ -2605,6 +2605,28 @@ h6 {
   transition: all 0.3s ease;
 }
 
+.tax-product_cat .btn-filter {
+  background: none;
+  border: 2px solid #dfdfdf;
+  color: #303030;
+  font-weight: bold;
+  line-height: normal;
+  margin: 0 10px 10px;
+  padding: 10px 12px;
+  outline: none;
+}
+
+.tax-product_cat .btn-close {
+  background: none;
+  border: none;
+  color: #999999;
+  font-size: 14px;
+  height: 40px;
+  line-height: 40px;
+  padding: 0 10px;
+  outline: none;
+}
+
 .tax-product_cat .btn-filter,
 .tax-product_cat .btn-close {
   display: none;
@@ -2818,6 +2840,10 @@ h6 {
   vertical-align: middle;
 }
 
+.tax-product_cat .reset-filter span {
+  display: none;
+}
+
 .tax-product_cat ul.products {
   margin: 0 -1px;
 }
@@ -2998,44 +3024,32 @@ h6 {
   }
 
   .tax-product_cat .btn-filter {
-    background: none;
-    border: 2px solid #dfdfdf;
     display: inline-block;
     vertical-align: middle;
-    color: #303030;
-    font-weight: bold;
-    line-height: normal;
-    margin: 0 10px 10px;
-    padding: 10px 12px;
-    outline: none;
   }
 
   .tax-product_cat .btn-close {
-    background: none;
-    border: none;
-    color: #999999;
-    font-size: 14px;
-    height: 40px;
-    line-height: 40px;
-    padding: 0 10px;
-    outline: none;
+    width: 45%;
     position: fixed;
-    top: 0;
-    left: 0;
+    top: 80%;
+    left: 12px;
     z-index: 1111;
   }
 
   .tax-product_cat #placeHolder {
-    background: #ffffff;
+    background: rgba(255, 255, 255, 0.95);
     display: none;
     width: 100%;
     height: 100%;
     margin: 0;
-    padding-top: 40px;
     position: fixed;
     top: 0;
     left: 0;
     z-index: 111;
+  }
+
+  .tax-product_cat #placeHolder ul.ft-menu {
+    max-height: 80%;
     overflow-x: hidden;
     overflow-y: auto;
   }
@@ -3077,11 +3091,23 @@ h6 {
   }
 
   .tax-product_cat .reset-filter {
+    font-size: 14px;
+    line-height: 40px;
+    width: 45%;
     margin: 0;
+    padding: 0 10px;
     position: fixed;
-    top: 0;
-    right: 0;
+    top: 80%;
+    right: 12px;
     z-index: 1111;
+  }
+
+  .tax-product_cat .reset-filter i {
+    display: none;
+  }
+
+  .tax-product_cat .reset-filter span {
+    display: block;
   }
 
   .tax-product_cat ul.products li.product {
@@ -3106,6 +3132,15 @@ h6 {
 @media only screen and (max-width: 480px) {
   .tax-product_cat .cat-header .page-title {
     font-size: 40px;
+  }
+
+  .tax-product_cat #placeHolder ul.ft-menu {
+    max-height: 90%;
+  }
+
+  .tax-product_cat .btn-close,
+  .tax-product_cat .reset-filter {
+    top: 90%;
   }
 
   .tax-product_cat ul.products li.product {
